[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-copilot"
version = "0.1.0"
description = "Your AI decision-making assistant"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "JC", email = "che178bj@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "questionary>=1.10.0",
    "rich>=10.0.0",
]

[project.scripts]
decision-copilot = "decision_copilot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["decision_copilot*"]
